--- a/TableEditor/MainWindow.xaml
+++ b/TableEditor/MainWindow.xaml
@@ -25,12 +25,19 @@
                     <Button HorizontalAlignment="Right" Content="Auth" Style="{StaticResource MaterialDesignFlatButton}"></Button>
                 </Grid>
 
-                <TextBox x:Name="TextBoxLogin" materialDesign:HintAssist.Hint="Login" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-                <PasswordBox x:Name="PasswordBox" materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
-                <PasswordBox x:Name="RepeatPasswordBox" materialDesign:HintAssist.Hint="Repeat password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
-                <TextBox x:Name="TextBoxKeyWord" materialDesign:HintAssist.Hint="Key word" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-
-                <Button Content="Registration NOW!!!" Margin="0 20" Click="Button_Reg_Click"/>
+                <StackPanel x:Name="RegistrationForm" Visibility="Collapsed">
+                    <TextBox x:Name="TextBoxLogin" materialDesign:HintAssist.Hint="Login" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                    <PasswordBox x:Name="PasswordBox" materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
+                    <PasswordBox x:Name="RepeatPasswordBox" materialDesign:HintAssist.Hint="Repeat password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
+                    <TextBox x:Name="TextBoxKeyWord" materialDesign:HintAssist.Hint="Key word" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                    <Button Content="Registration NOW!!!" Margin="0 20" Click="Button_Reg_Click"/>
+                </StackPanel>
+                
+                <StackPanel x:Name="AuthForm" Visibility="Visible">
+                    <TextBox x:Name="LoginField" materialDesign:HintAssist.Hint="Login" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                    <PasswordBox x:Name="PasswordField" materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
+                    <Button Content="Registration NOW!!!" Margin="0 20" Click="Button_Auth_Click"/>
+                </StackPanel>
             </StackPanel>
         </Border>
     </Grid>
