--- a/TableEditor/App.xaml
+++ b/TableEditor/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="TableEditor.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SchoolProj1"
+             xmlns:local="clr-namespace:Main"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
