--- a/TableEditor/WorkWindow.xaml
+++ b/TableEditor/WorkWindow.xaml
@@ -6,9 +6,6 @@
         xmlns:local="clr-namespace:TableEditor"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Title="WorkWindow" Height="450" Width="800">
-    <Grid>
-        
-
-    </Grid>
+        Title="Table Editor" Height="450" Width="800">
+    
 </Window>
