--- a/TableEditor/WorkWindow.xaml
+++ b/TableEditor/WorkWindow.xaml
@@ -11,29 +11,29 @@
         ResizeMode="CanResizeWithGrip" WindowStyle="None"
         AllowsTransparency="True">
 
-    <Grid>
+    <Grid x:Name="BaseGrid">
         <Grid.RowDefinitions>
-            <RowDefinition Height="5*"/>
-            <RowDefinition Height="133*"/>
-            <RowDefinition Height="6*"/>
+            <RowDefinition  Height="5*"/>
+            <RowDefinition Height="135*"/>
+            <RowDefinition Height="4*"/>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="15*"/>
-            <ColumnDefinition Width="52*"/>
+            <ColumnDefinition x:Name="ColumnFunctionsField" Width="52*"/>
             <ColumnDefinition Width="189*"/>
         </Grid.ColumnDefinitions>
 
-        <Border BorderBrush="#141414" Grid.ColumnSpan="3"/>
+        <Border x:Name="FunctionalField" BorderBrush="#141414" Grid.ColumnSpan="3"/>
 
         <Border Background="#333333" Grid.Row="1"/>
         <Border Background="#252526" Grid.Column="1" Grid.Row="1"/>
 
-        <Grid x:Name="Right_TableField" Grid.Row="1" Grid.Column="1" Visibility="Collapsed">
+        <Grid x:Name="Left_TableField" Grid.Row="1" Grid.Column="1" Visibility="Collapsed">
             <Label Content="Таблицы" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Foreground="#FFFFFF" FontFamily="Consolas" FontSize="20"/>
         </Grid>
 
-        <Grid x:Name="Settings" Grid.Row="1" Grid.Column="1" Visibility="Collapsed">
+        <Grid x:Name="Settings" Grid.Row="1" Grid.Column="1" Visibility="Visible">
             <Label Content="Настройки" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Foreground="#FFFFFF" FontFamily="Consolas" FontSize="20"/>
         </Grid>
 
@@ -47,20 +47,20 @@
             </Image.Clip>
         </Image>
 
-        <Button  HorizontalAlignment="Center" Margin="0,130,0,0" Grid.Row="1" VerticalAlignment="Top" Height="50" Width="50" BorderThickness="0">
+        <Button  HorizontalAlignment="Center" Margin="0,130,0,0" Grid.Row="1" VerticalAlignment="Top" Height="50" Width="50" BorderThickness="0" Click="BTableList">
             <Button.Background>
                 <ImageBrush ImageSource="/icons/files1.png"/>
             </Button.Background>
         </Button>
 
-        <Button  HorizontalAlignment="Center" Margin="0,570,0,0" Grid.Row="1" VerticalAlignment="Top" Height="50" Width="50" BorderThickness="0">
+        <Button  HorizontalAlignment="Center" Margin="0,570,0,0" Grid.Row="1" VerticalAlignment="Top" Height="50" Width="50" BorderThickness="0" Click="BSettings">
             <Button.Background>
                 <ImageBrush ImageSource="/icons/settings1.png"/>
             </Button.Background>
         </Button>
 
-        <Label x:Name="user_nickname" Grid.Column="1" Content="user__nickname" HorizontalAlignment="Left"  Grid.Row="2" VerticalAlignment="Center" Width="185" Height="44" FontSize="24" FontFamily="Consolas"/>
-        <Label x:Name="status_bar" Grid.Column="2" Content="status__bar" HorizontalAlignment="Left"  Grid.Row="2" VerticalAlignment="Center" Width="180" Height="44" FontSize="24" Margin="90,0,0,0" FontFamily="Consolas"/>
+        <Label x:Name="user_nickname" Grid.Column="1" Content="user__nickname" HorizontalAlignment="Left"  Grid.Row="2" VerticalAlignment="Center" Width="185" Height="40" FontSize="24" FontFamily="Consolas"/>
+        <Label x:Name="status_bar" Grid.Column="2" Content="status__bar" HorizontalAlignment="Center"  Grid.Row="2" VerticalAlignment="Center" Width="180" Height="40" FontSize="24" FontFamily="Consolas"/>
 
         <Grid Grid.Column="2" Grid.Row="1">
             <Grid.RowDefinitions>
