--- a/TableEditor/MainWindow.xaml
+++ b/TableEditor/MainWindow.xaml
@@ -8,35 +8,36 @@
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         Title="Auth" 
         Height="600" Width="1000">
-    <Grid Background="#ffdadada">
-        <Border MinWidth="400" Margin="15" Background="#fff" VerticalAlignment="Center" Padding="30" MaxWidth="550" CornerRadius="20">
+
+    <Grid Background="#1E1E1E">
+        <Border MinWidth="400" Margin="15" Background="#1E1E1E" VerticalAlignment="Center" Padding="30" MaxWidth="550" CornerRadius="20">
             <Border.Effect>
-                <DropShadowEffect BlurRadius="30" Color="LightGray" ShadowDepth="0"/>
+                <DropShadowEffect BlurRadius="10" Color="DarkSlateGray" ShadowDepth="0"/>
             </Border.Effect>
 
             <StackPanel>
-                <TextBlock Text="Table Editor" FontSize="30" FontWeight="Bold" Margin="0 0 0 20"/>
+                <TextBlock Text="Table Editor" FontSize="30" FontWeight="Bold" Margin="0 0 0 20" Foreground="White"/>
                 <Grid Margin="0 0 0 20">
                     <Button HorizontalAlignment="Left" Content="Registration" Click="Button_Reg_Form_Click">
                         <Button.Effect>
-                            <DropShadowEffect BlurRadius="30" Color="LightGray" ShadowDepth="0"/>
+                            <DropShadowEffect BlurRadius="10" Color="DarkSlateGray" ShadowDepth="0"/>
                         </Button.Effect>
                     </Button>
                     <Button HorizontalAlignment="Right" Content="Auth" Click="Button_Auth_Form_Click" Style="{StaticResource MaterialDesignFlatButton}"></Button>
                 </Grid>
 
                 <StackPanel x:Name="RegistrationForm" Visibility="Collapsed">
-                    <TextBox x:Name="TextBoxLogin" materialDesign:HintAssist.Hint="Login" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-                    <PasswordBox x:Name="PasswordBox" materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
-                    <PasswordBox x:Name="RepeatPasswordBox" materialDesign:HintAssist.Hint="Repeat password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
-                    <TextBox x:Name="TextBoxKeyword" materialDesign:HintAssist.Hint="Key word" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                    <TextBox x:Name="TextBoxLogin" materialDesign:HintAssist.Hint="Login" Foreground="White" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                    <PasswordBox x:Name="PasswordBox" materialDesign:HintAssist.Hint="Password" Foreground="White" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
+                    <PasswordBox x:Name="RepeatPasswordBox" materialDesign:HintAssist.Hint="Repeat password" Foreground="White" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
+                    <TextBox x:Name="TextBoxKeyword" materialDesign:HintAssist.Hint="Key word" Foreground="White" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
                     <Button Content="Registration" Margin="0 20" Click="Button_Reg_Click"/>
                 </StackPanel>
                 
                 <StackPanel x:Name="AuthForm" Visibility="Visible">
-                    <TextBox x:Name="LoginField" materialDesign:HintAssist.Hint="Login" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
-                    <PasswordBox x:Name="PasswordField" materialDesign:HintAssist.Hint="Password" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
-                    <CheckBox x:Name="RememberAuth" Content="Rememder" FontWeight="Bold"/>
+                    <TextBox x:Name="LoginField" materialDesign:HintAssist.Hint="Login" Foreground="White" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
+                    <PasswordBox x:Name="PasswordField" materialDesign:HintAssist.Hint="Password" Foreground="White" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
+                    <CheckBox x:Name="RememberAuth" Content="Rememder" FontWeight="Bold" Foreground="White" Margin="0 20 0 0"/> 
                     <Button Content="Auth" Margin="0 20" Click="Button_Auth_Click"/>
                 </StackPanel>
 
