--- a/TableEditor/WorkWindow.xaml
+++ b/TableEditor/WorkWindow.xaml
@@ -6,64 +6,72 @@
         xmlns:local="clr-namespace:TableEditor"
         mc:Ignorable="d"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        Height="720" Width="1280"
+        Height="735" Width="1280"
+        MinHeight="720" MinWidth="720"
         Background="#1E1E1E"
-        ResizeMode="CanResizeWithGrip" WindowStyle="SingleBorderWindow"
-        AllowsTransparency="True">
+        ResizeMode="CanResizeWithGrip"
+        Title="Table Editor">
 
 
     <Grid x:Name="BaseGrid">
         <Grid.RowDefinitions>
-            <RowDefinition  Height="5*"/>
-            <RowDefinition Height="135*"/>
-            <RowDefinition Height="4*"/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="15*"/>
-            <ColumnDefinition x:Name="ColumnFunctionsField" Width="52*"/>
-            <ColumnDefinition Width="189*"/>
+            <ColumnDefinition Width="50"/>
+            <ColumnDefinition x:Name="ColumnFunctionsField" Width="285"/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <Border x:Name="FunctionalField" BorderBrush="#141414" Grid.ColumnSpan="3"/>
+        <Border Background="#333333">
+            <StackPanel Margin="0,64,0,0" >
 
-        <Border Background="#333333" Grid.Row="1"/>
-        <Border Background="#252526" Grid.Column="1" Grid.Row="1"/>
+                <Button  HorizontalAlignment="Center" Margin="0 30 0 0" Width="34" BorderThickness="0" Click="BTableList">
+                    <Button.Background>
+                        <ImageBrush ImageSource="\icons\files1.png"/>
+                    </Button.Background>
+                </Button>
 
-        <Grid x:Name="Left_TableField" Grid.Row="1" Grid.Column="1" Visibility="Collapsed">
+                <Button  HorizontalAlignment="Center" Margin="0 30 0 0" Width="34" BorderThickness="0" Click="BSettings">
+                    <Button.Background>
+                        <ImageBrush ImageSource="\icons\settings1.png"/>
+                    </Button.Background>
+                </Button>
+
+            </StackPanel>
+
+        </Border>
+
+        <Border Background="#252526" Grid.Column="1" />
+
+        <Grid x:Name="Left_TableField" Grid.Column="1" Visibility="Collapsed">
             <Label Content="Таблицы" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Foreground="#FFFFFF" FontFamily="Consolas" FontSize="20"/>
         </Grid>
 
-        <Grid x:Name="Settings" Grid.Row="1" Grid.Column="1" Visibility="Visible">
+        <Grid x:Name="Settings" Grid.Column="1" Visibility="Visible">
             <Label Content="Настройки" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Foreground="#FFFFFF" FontFamily="Consolas" FontSize="20"/>
         </Grid>
 
-        <Border Background="#007ACC" Grid.Row="2" Grid.ColumnSpan="3"/>
+        <Border Background="#007ACC" Grid.ColumnSpan="3" VerticalAlignment="Bottom">
+            
+            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
+                <Label x:Name="userNickname" Content="user__nickname" FontSize="16" FontFamily="Consolas" Height="26"/>
+                <Label x:Name="status_bar" Content="status__bar" FontSize="16" FontFamily="Consolas" Height="26" Margin="100 0 0 0"/>
+            </StackPanel>
 
-        <Border Background="#141414" Grid.Row="0" Grid.ColumnSpan="3" Visibility="Hidden"/>
+        </Border>
 
-        <Image x:Name="user_icon" Source="\icons\56556.jpg" Stretch="Fill" Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Center" Height="50" Width="50" Margin="0,16,0,0">
+
+        <Image x:Name="user_icon" Source="\icons\56556.jpg" Stretch="Fill" VerticalAlignment="Top" HorizontalAlignment="Center" Height="40" Width="40" Margin="0,18,0,0">
             <Image.Clip>
-                <RectangleGeometry RadiusX="7" RadiusY="7" Rect="0,0,50,50"/>
+                <RectangleGeometry RadiusX="7" RadiusY="7" Rect="0,0,40,40"/>
             </Image.Clip>
         </Image>
 
-        <Button  HorizontalAlignment="Center" Margin="0,130,0,0" Grid.Row="1" VerticalAlignment="Top" Height="50" Width="50" BorderThickness="0" Click="BTableList">
-            <Button.Background>
-                <ImageBrush ImageSource="\icons\files1.png"/>
-            </Button.Background>
-        </Button>
 
-        <Button  HorizontalAlignment="Center" Margin="0,570,0,0" Grid.Row="1" VerticalAlignment="Top" Height="50" Width="50" BorderThickness="0" Click="BSettings">
-            <Button.Background>
-                <ImageBrush ImageSource="\icons\settings1.png"/>
-            </Button.Background>
-        </Button>
 
-        <Label x:Name="user_nickname" Grid.Column="1" Content="user__nickname" HorizontalAlignment="Left"  Grid.Row="2" VerticalAlignment="Center" Width="185" Height="40" FontSize="24" FontFamily="Consolas"/>
-        <Label x:Name="status_bar" Grid.Column="2" Content="status__bar" HorizontalAlignment="Center"  Grid.Row="2" VerticalAlignment="Center" Width="180" Height="40" FontSize="24" FontFamily="Consolas"/>
-
-        <Grid Grid.Column="2" Grid.Row="1">
+        <Grid Grid.Column="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="67*"/>
                 <RowDefinition Height="66*"/>
@@ -75,12 +83,12 @@
 
             <StackPanel x:Name="lastTableList" Margin="50 50 50 50">
                 <Label Content="Последние таблицы:" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontFamily="Consolas" FontSize="20"/>
-                <Label x:Name="undefinedTableOnClient" Content="1.Undefined..." HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="Gray" FontFamily="Consolas" FontSize="20"/>
+                <Label x:Name="undefinedTableOnClient" Content="1.Последних таблиц не найдено" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Gray" FontFamily="Consolas" FontSize="20"/>
             </StackPanel>
 
             <StackPanel x:Name="tutorials" Margin="52,50,53,50" Grid.Column="1">
                 <Label Content="Уроки по этой таблице:" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontFamily="Consolas" FontSize="20"/>
-                <Label x:Name="undefinedTutorials" Content="1.Undefined..." HorizontalAlignment="Left" VerticalAlignment="Center" Foreground="Gray" FontFamily="Consolas" FontSize="20"/>
+                <Label x:Name="undefinedTutorials" Content="1.Уроков не найдено" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Gray" FontFamily="Consolas" FontSize="20"/>
             </StackPanel>
 
 
