--- a/TableEditor/WorkWindow.xaml
+++ b/TableEditor/WorkWindow.xaml
@@ -15,7 +15,8 @@
 
     <Grid x:Name="BaseGrid">
         <Grid.RowDefinitions>
-            <RowDefinition/>
+            <RowDefinition Height="694*"/>
+            <RowDefinition Height="25*"/>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -24,8 +25,14 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <Border Background="#333333">
-            <StackPanel Margin="0,64,0,0" >
+        <Border Background="#333333" Grid.RowSpan="2">
+            <StackPanel>
+
+                <Button  HorizontalAlignment="Center" Margin="0 30 0 0" Width="40" BorderThickness="0" Click="BPersonalClient" Height="38">
+                    <Button.Background>
+                        <ImageBrush ImageSource="\icons\standart_user_icon.png"/>
+                    </Button.Background>
+                </Button>
 
                 <Button  HorizontalAlignment="Center" Margin="0 30 0 0" Width="34" BorderThickness="0" Click="BTableList">
                     <Button.Background>
@@ -43,35 +50,30 @@
 
         </Border>
 
-        <Border Background="#252526" Grid.Column="1" />
+        <Border Background="#252526" Grid.Column="1" Grid.RowSpan="2" />
 
-        <Grid x:Name="Left_TableField" Grid.Column="1" Visibility="Collapsed">
-            <Label Content="Таблицы" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Foreground="#FFFFFF" FontFamily="Consolas" FontSize="20"/>
+        <Grid x:Name="Left_TableField" Grid.Column="1" Visibility="Collapsed" Grid.RowSpan="2">
+            <Label Content="Таблицы" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Foreground="#FFFFFF" FontFamily="Consolas" FontSize="15"/>
         </Grid>
 
-        <Grid x:Name="Settings" Grid.Column="1" Visibility="Visible">
-            <Label Content="Настройки" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Foreground="#FFFFFF" FontFamily="Consolas" FontSize="20"/>
+        <Grid x:Name="Settings" Grid.Column="1" Visibility="Collapsed" Grid.RowSpan="2">
+            <Label Content="Настройки" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Foreground="#FFFFFF" FontFamily="Consolas" FontSize="15"/>
+        </Grid>
+        <Grid x:Name="PersonalClient" Grid.Column="1" Visibility="Visible" Grid.RowSpan="2">
+            <Label Content="Пользователь" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Foreground="#FFFFFF" FontFamily="Consolas" FontSize="15"/>
         </Grid>
 
-        <Border Background="#007ACC" Grid.ColumnSpan="3" VerticalAlignment="Bottom">
-            
+        <Border Background="#007ACC" Grid.ColumnSpan="3" VerticalAlignment="Center" Grid.Row="1">
+
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
-                <Label x:Name="userNickname" Content="user__nickname" FontSize="16" FontFamily="Consolas" Height="26"/>
-                <Label x:Name="status_bar" Content="status__bar" FontSize="16" FontFamily="Consolas" Height="26" Margin="100 0 0 0"/>
+                <Label x:Name="userNickname" Content="user__nickname" FontSize="15" FontFamily="Consolas" Height="25"/>
+                <Label x:Name="status_bar" Content="status__bar" FontSize="15" FontFamily="Consolas" Height="26" Margin="100 0 0 0"/>
             </StackPanel>
 
         </Border>
 
 
-        <Image x:Name="user_icon" Source="\icons\56556.jpg" Stretch="Fill" VerticalAlignment="Top" HorizontalAlignment="Center" Height="40" Width="40" Margin="0,18,0,0">
-            <Image.Clip>
-                <RectangleGeometry RadiusX="7" RadiusY="7" Rect="0,0,40,40"/>
-            </Image.Clip>
-        </Image>
-
-
-
-        <Grid Grid.Column="2">
+        <Grid Grid.Column="2" Grid.RowSpan="2">
             <Grid.RowDefinitions>
                 <RowDefinition Height="67*"/>
                 <RowDefinition Height="66*"/>
@@ -82,16 +84,15 @@
             </Grid.ColumnDefinitions>
 
             <StackPanel x:Name="lastTableList" Margin="50 50 50 50">
-                <Label Content="Последние таблицы:" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontFamily="Consolas" FontSize="20"/>
-                <Label x:Name="undefinedTableOnClient" Content="1.Последних таблиц не найдено" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Gray" FontFamily="Consolas" FontSize="20"/>
+                <Label Content="Последние таблицы:" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontFamily="Consolas" FontSize="15"/>
+                <Label x:Name="undefinedTableOnClient" Content="1.Последних таблиц не найдено" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Gray" FontFamily="Consolas" FontSize="15"/>
             </StackPanel>
 
             <StackPanel x:Name="tutorials" Margin="52,50,53,50" Grid.Column="1">
-                <Label Content="Уроки по этой таблице:" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontFamily="Consolas" FontSize="20"/>
-                <Label x:Name="undefinedTutorials" Content="1.Уроков не найдено" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Gray" FontFamily="Consolas" FontSize="20"/>
+                <Label Content="Уроки по этой таблице:" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontFamily="Consolas" FontSize="15"/>
+                <Label x:Name="undefinedTutorials" Content="1.Уроков не найдено" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Gray" FontFamily="Consolas" FontSize="15"/>
             </StackPanel>
-
-
+            
         </Grid>
 
     </Grid>
