--- a/TableEditor/MainWindow.xaml
+++ b/TableEditor/MainWindow.xaml
@@ -23,7 +23,7 @@
                             <DropShadowEffect BlurRadius="10" Color="DarkSlateGray" ShadowDepth="0"/>
                         </Button.Effect>
                     </Button>
-                    <Button HorizontalAlignment="Right" Content="Auth" Click="Button_Auth_Form_Click" Style="{StaticResource MaterialDesignFlatButton}"></Button>
+                    <Button HorizontalAlignment="Right" Content="Login" Click="Button_Auth_Form_Click" Style="{StaticResource MaterialDesignFlatButton}"></Button>
                 </Grid>
 
                 <StackPanel x:Name="RegistrationForm" Visibility="Collapsed">
@@ -37,8 +37,8 @@
                 <StackPanel x:Name="AuthForm" Visibility="Visible">
                     <TextBox x:Name="LoginField" materialDesign:HintAssist.Hint="Login" Foreground="White" Style="{StaticResource MaterialDesignFloatingHintTextBox}"/>
                     <PasswordBox x:Name="PasswordField" materialDesign:HintAssist.Hint="Password" Foreground="White" Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"/>
-                    <CheckBox x:Name="RememberAuth" Content="Rememder" FontWeight="Bold" Foreground="White" Margin="0 20 0 0"/> 
-                    <Button Content="Auth" Margin="0 20" Click="Button_Auth_Click"/>
+                    <CheckBox x:Name="RememberAuth" Content="Remember" FontWeight="Bold" Foreground="White" Margin="0 20 0 0"/> 
+                    <Button Content="Login" Margin="0 20" Click="Button_Auth_Click"/>
                 </StackPanel>
 
                 <TextBlock x:Name="ErrorField" FontSize="17" FontWeight="Bold" Foreground="Red" Visibility="Collapsed"/>
