--- a/TableEditor/WorkWindow.xaml
+++ b/TableEditor/WorkWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="TableEditor.WorkWindow"
+﻿<Window x:Name="TableWorkWindow" x:Class="TableEditor.WorkWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -15,8 +15,8 @@
 
     <Grid x:Name="BaseGrid">
         <Grid.RowDefinitions>
-            <RowDefinition Height="694*"/>
-            <RowDefinition Height="25*"/>
+            <RowDefinition Height="704*"/>
+            <RowDefinition Height="15*"/>
         </Grid.RowDefinitions>
 
         <Grid.ColumnDefinitions>
@@ -24,30 +24,63 @@
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Column="1" Grid.RowSpan="2">
+        <Border x:Name="FieldLastFilesTutorialsOther" Grid.Column="1" Grid.RowSpan="2" Visibility="Collapsed">
+
+            <Grid Grid.Column="1" Grid.RowSpan="2">
+
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="67*"/>
+                    <RowDefinition Height="66*"/>
+                </Grid.RowDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="94*"/>
+                    <ColumnDefinition Width="95*"/>
+                </Grid.ColumnDefinitions>
+
+                <StackPanel x:Name="lastTableList" Margin="50 50 50 50">
+                    <Label Content="Последние таблицы:" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontFamily="Consolas" FontSize="15"/>
+                    <Label x:Name="undefinedTableOnClient" Content="1.Последних таблиц не найдено" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Gray" FontFamily="Consolas" FontSize="15"/>
+                </StackPanel>
+
+                <StackPanel x:Name="tutorials" Margin="52,50,53,50" Grid.Column="1">
+                    <Label Content="Уроки по этой таблице:" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontFamily="Consolas" FontSize="15"/>
+                    <Label x:Name="undefinedTutorials" Content="1.Уроков не найдено" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Gray" FontFamily="Consolas" FontSize="15"/>
+                </StackPanel>
+
+            </Grid>
+        </Border>
+
+        <Grid x:Name="TableMainGrid" Grid.Column="1">
+            <!--This main grid for table workfield-->
             <Grid.RowDefinitions>
-                <RowDefinition Height="67*"/>
-                <RowDefinition Height="66*"/>
+                <RowDefinition Height="79*"/>
+                <RowDefinition Height="620*"/>
             </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="94*"/>
-                <ColumnDefinition Width="95*"/>
-            </Grid.ColumnDefinitions>
 
-            <StackPanel x:Name="lastTableList" Margin="50 50 50 50">
-                <Label Content="Последние таблицы:" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontFamily="Consolas" FontSize="15"/>
-                <Label x:Name="undefinedTableOnClient" Content="1.Последних таблиц не найдено" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Gray" FontFamily="Consolas" FontSize="15"/>
-            </StackPanel>
+            <Border x:Name="TableWorkFlowToolsBody" Background="#FF2B2B2B">
+                <StackPanel HorizontalAlignment="Left">
+                    <Button Content="Button" Click="TestFillTable"/>
 
-            <StackPanel x:Name="tutorials" Margin="52,50,53,50" Grid.Column="1">
-                <Label Content="Уроки по этой таблице:" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" FontFamily="Consolas" FontSize="15"/>
-                <Label x:Name="undefinedTutorials" Content="1.Уроков не найдено" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="Gray" FontFamily="Consolas" FontSize="15"/>
-            </StackPanel>
+                </StackPanel>
+            </Border>
+
+            <DataGrid x:Name="DataGrids" Grid.Row="1" AutoGenerateColumns="False" CanUserResizeColumns="True" CanUserAddRows="True">
+                <DataGrid.Columns>
+
+                    <DataGridTextColumn Header="Name" Binding="{Binding Names}" />
+                    <DataGridTextColumn Header="Status" Binding="{Binding Statuss}" />
+                    <DataGridTextColumn Header="Age" Binding="{Binding Ages}" />
+
+                </DataGrid.Columns>
+
+            </DataGrid>
+
+
+
 
         </Grid>
 
-
-        <Border x:Name="FuncFieldBody" Background="#252526" Grid.Column="1" RenderTransformOrigin="0,0.5" HorizontalAlignment="Left" Width="250">
+        <Border x:Name="FuncFieldBody" Visibility="Visible" Background="#252526" Grid.Column="1" RenderTransformOrigin="0,0.5" HorizontalAlignment="Left" Width="250" Grid.RowSpan="2">
 
             <Border.Effect>
                 <DropShadowEffect BlurRadius="7" ShadowDepth="1" Color="#FF232323"/>
@@ -72,8 +105,13 @@
             </Grid>
         </Border>
 
-
         <Border Background="#333333" Grid.RowSpan="2">
+
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="7" ShadowDepth="1" Color="#FF232323"/>
+            </Border.Effect>
+
+
             <StackPanel>
 
                 <Button  HorizontalAlignment="Center" Margin="0 30 0 0" Width="40" BorderThickness="0" Click="BPersonalClient" Height="38">
@@ -99,7 +137,10 @@
         </Border>
 
 
-        <Border Background="#007ACC" Grid.ColumnSpan="3" VerticalAlignment="Center" Grid.Row="1">
+        <Border Background="#007ACC" Grid.ColumnSpan="2" VerticalAlignment="Center" Grid.Row="1" Height="25">
+            <Border.Effect>
+                <DropShadowEffect BlurRadius="7" ShadowDepth="1" Color="#FF232323"/>
+            </Border.Effect>
 
             <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Center">
                 <Label x:Name="userNickname" Content="user__nickname" FontSize="15" FontFamily="Consolas" Height="25"/>
