--- a/TableEditor/WorkWindow.xaml
+++ b/TableEditor/WorkWindow.xaml
@@ -60,25 +60,15 @@
 
             <Border x:Name="TableWorkFlowToolsBody" Background="#FF2B2B2B">
                 <StackPanel HorizontalAlignment="Left">
-                    <Button Content="Button" Click="TestFillTable"/>
+                    
 
                 </StackPanel>
             </Border>
 
-            <DataGrid x:Name="DataGrids" Grid.Row="1" AutoGenerateColumns="False" CanUserResizeColumns="True" CanUserAddRows="True">
-                <DataGrid.Columns>
-
-                    <DataGridTextColumn Header="Name"/>
-                    <DataGridTextColumn Header="Status"/>
-                    <DataGridTextColumn Header="Age"/>
-
-                </DataGrid.Columns>
-
-            </DataGrid>
-
-
-
-
+            <TabControl x:Name="DataGridTabControll" Grid.Row="1" TabStripPlacement="Right" Style="{DynamicResource MaterialDesignTabControl}">
+                
+            </TabControl>
+            
         </Grid>
 
         <Border x:Name="FuncFieldBody" Visibility="Visible" Background="#252526" Grid.Column="1" RenderTransformOrigin="0,0.5" HorizontalAlignment="Left" Width="0" Grid.RowSpan="2">
@@ -89,13 +79,14 @@
 
             <Grid x:Name="LeftFuncField" Grid.Column="1" Visibility="Visible" Grid.RowSpan="2">
 
-                <StackPanel x:Name="PersonalClient">
+                <StackPanel x:Name="PersonalClient" Visibility="Collapsed">
                     <Label Content="Пользователь" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Foreground="#FFFFFF" FontFamily="Consolas" FontSize="15"/>
                 </StackPanel>
 
 
-                <StackPanel  x:Name="TableList" Visibility="Collapsed">
+                <StackPanel  x:Name="TableList" Visibility="Visible">
                     <Label Content="Таблицы" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Foreground="#FFFFFF" FontFamily="Consolas" FontSize="15"/>
+                    <Button Content="Create table" Click="BCreateTable"></Button>
                 </StackPanel>
 
 
